compiler/acton/test/typeerrors/actor_self_reserved_method_name.act
actor Test():
    def self():
        pass